# uk_police_etl

./: .gitignore  README.md  pyproject.toml  requirements.txt  test.py
data/extract/: raw_data_part_0.csv  raw_data_part_1.csv
notebooks/: transform.ipynb
scripts/: run_etl.py
src/: run_etl.py
src/extract/: call_limit.py  extract.py  extract_data.py  extract_dates.py  extract_forces.py  extract_request.py
src/transform/: transform.py
tests/: run_tests.py
tests/component_tests/: test_call_limit.py  test_extract_data.py  test_extract_dates.py  test_extract_forces.py  test_extract_request.py  test_transform.py
tests/integration_tests/: test_extract.py
uk_police_etl.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
