[build-system]
requires = ["setuptools>=45", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "uk_police_etl"
version = "0.1.0"
description = "A personal project for developing additional skills in ETL."
authors = [
    { name = "Grant Oglesby", email = "grant.oglesby@hotmail.co.uk" }
]
readme = "README.md"
requires-python = ">=3.9"
classifiers = [
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent",
    "Topic :: Software Development :: Libraries :: Python Modules"
]
dynamic = ["dependencies"]

[project.urls]
Homepage = "https://github.com/Grant-Oglesby/uk_police_etl.git"

[project.scripts]
run_etl = "scripts.run_etl:main"
run_tests = "tests.run_tests:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["*"]

[tool.setuptools.dynamic]
dependencies = {file = ["requirements.txt"]}